--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,4 @@
-<div class="w-100 py-3 bg-blue">
+<div class="w-100 py-3 bg-blue" id="title_bar">
     <div class="container">
         <a href="/" class="text-decoration-none">
             <h1 class="title-orange fw-bold m-0" style="font-size: 4rem">Mechanics Reference</h1>
