Edited CBTF workflow, Page titles, Search feature
Edited CBTF workflow to stash before pulling new changes before committing, otherwise it cant upload. Before it was not stashing and telling me it wasnt happy

Made it so the title updates to whatever course page you are on, i.e. "Solids Reference", "Dynamics Reference", etc.

Edited search feature to make it non-case sensitive in both ways:
- can query in uppercase/lowercase
- results return regardless of upper/lowercase

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,18 @@
+---
+const {course} = Astro.props;
+
+const coursetags = {
+    'sta': 'Statics',
+    'dyn': 'Dynamics',
+    'sol': 'Solid Mechanics'
+}
+
+---
+
 <div class="w-100 py-3 bg-blue" id="title_bar">
     <div class="container">
         <a href="/" class="text-decoration-none">
-            <h1 class="title-orange fw-bold m-0" style="font-size: 4rem">Mechanics Reference</h1>
+            <h1 class="title-orange fw-bold m-0" style="font-size: 4rem">{course ? coursetags[course]  : "Mechanics"} Reference</h1>
         </a>
     </div>
 </div>
