--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,7 +56,7 @@ const pagename = cleaned[1]
 		</script>
 	</head>
 	<body class="w-100">
-		<Navbar/>
+		<Navbar course={course}/>
 		<div class="container-xxl content mb-5">
 			<SidebarContainer page={pagename} course={course}>
 				<slot name="navtree" />
