--- a/src/pages/sta/cartesian_coordinates.astro
+++ b/src/pages/sta/cartesian_coordinates.astro
@@ -168,7 +168,7 @@ In 3D the <InlineEquation equation='x, y, z' /> axes are oriented in right-hande
 
 We can also use the individual fingers on our right hand, where our pointer finger points in the x-direction, our middle finger points in the y-direction, and our thumb points in the z-direction.  
 
-<Image src='/Statics/CartCoordFigures/RightHandRule.png' width='6'></Image>
+<Image src='/Statics/CartCoordFigures/RightHandRule.jpg' width='6'></Image>
 
 </SubSection>
 
