--- a/src/pages/sol/axial_loading.astro
+++ b/src/pages/sol/axial_loading.astro
@@ -65,14 +65,14 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 <SubSection title="Force-Deformation Relation" id="force-deformation_relation"> 
 
-<DisplayEquation equation='\\delta = \\frac{PL}{EA}\\' title="Relation." background="True" />
+<DisplayEquation equation='\\delta = \\frac{PL}{EA}\\' title="Force-Deformation relation." background="True" />
 
 <DisplayEquation equation='\\delta = fP   =>   f = \\frac{L}{EA}\\' title=" Axial flexibility." background="True" />
 
 <DisplayEquation equation='P = k\\delta   =>   k = \\frac{EA}{L}\\' title=" Axial stiffness." background="True" />
 
 
-<DisplayEquation equation='P = \\sigma A\\' title="Text above." id="sts-sss" background="True" derivation="True" >
+<DisplayEquation equation='P = \\sigma A\\' title="Force-Stress relation." id="sts-sss" background="True" derivation="True" >
 
 	<DisplayEquation equation='\\sigma = E\\varepsilon\\' />
 	<DisplayEquation equation='\\varepsilon = \\delta / L\\' />
