Fixed the bouncing!

--- a/src/pages/sol/axial_loading.astro
+++ b/src/pages/sol/axial_loading.astro
@@ -65,7 +65,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 <SubSection title="Force-Deformation Relation" id="force-deformation_relation"> 
 
-<DisplayEquation equation='\\delta = \\frac{PL}{EA}\\' title="Relation." background="True" derivation="True" >
+<DisplayEquation equation='\\delta = \\frac{PL}{EA}\\' title="Relation." background="True" derivation="True" id="axl-fdr">
     
     <DisplayEquation equation='P = \\sigma A\\' />
     <DisplayEquation equation='P = E \\varepsilon A\\' />
