--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -668,7 +668,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
               
       <ul>
          <li>If only \( r \) changes: <InlineEquation equation="\\dot{\\hat{e}}_r = 0" /> and <InlineEquation equation="\\dot{\\hat{e}}_\\theta = 0" /> </li>
-         <li>If only <InlineEquation equation="\\theta" /> changes: <InlineEquation equation="\\dot{\\hat{e}}_r \neq 0" /> and <InlineEquation equation="\\dot{\\hat{e}}_\\theta \neq 0" /> </li>
+         <li>If only <InlineEquation equation="\\theta" /> changes: <InlineEquation equation="\\dot{\\hat{e}}_r \\neq 0" /> and <InlineEquation equation="\\dot{\\hat{e}}_\\theta \\neq 0" /> </li>
       </ul>
         </div>
       </Example>
